Fixed map pages anchor for recruiters and fixed tooltips on mobile.

--- a/esljobmap/static/foundation/scss/component/_lucid_radio.scss
+++ b/esljobmap/static/foundation/scss/component/_lucid_radio.scss
@@ -42,10 +42,10 @@
             content: "";
             position: absolute;
             display: none;
-            top: 9px;
-            left: 9px;
-            width: 8px;
-            height: 8px;
+            top: 8px;
+            left: 8px;
+            width: 9px;
+            height: 9px;
             border-radius: 50%;
             background: white;
         }
